# cervos

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  requirements.md
.claude/: settings.local.json
.claude/rules/: design-system.md  firmware.md  infrastructure.md  mobile.md  models.md  server.md
.github/workflows/: ci.yml  design-lint.yml
console/: Dockerfile
debug-app/: README.md  docker-compose.yml
debug-app/backend/: Dockerfile  Dockerfile.base  app.py  audio_utils.py  lc3_pipeline.py  requirements-base.txt  requirements.txt  speaker_store.py  streaming_stt.py
debug-app/frontend/: app.js  index.html  style.css
debug-app/whisper/: Dockerfile  entrypoint.sh
design-system/: components.yaml  tokens.yaml
docs/: architecture.md  contributing.md  hardware-guide.md  protocol-notes.md  setup-guide.md
firmware/: CMakeLists.txt  app.overlay  prj.conf  west.yml
firmware/src/: audio_buffer.c  audio_buffer.h  ble_audio_stream.c  ble_l2cap_stream.c  ble_sniffer.c  lc3_encoder.c  lc3_encoder.h  main.c  opus_encoder_wrapper.c  opus_encoder_wrapper.h  usb_audio_capture.c
mobile/: pubspec.yaml
mobile/android/: local.properties
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt  lc3_decoder_jni.c
mobile/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
mobile/android/app/src/main/kotlin/com/cervos/cervos/: L2capAudioPlugin.kt  Lc3Decoder.kt  Lc3DecoderPlugin.kt  MainActivity.kt
mobile/android/app/src/main/res/drawable/: launch_background.xml
mobile/android/app/src/main/res/values/: styles.xml
mobile/lib/: main.dart
mobile/lib/audio/: audio_pipeline.dart  audio_state.dart  lc3_decoder.dart  opus_decoder.dart  pcm_player.dart  spectrogram_processor.dart
mobile/lib/ble/: ble_manager.dart  ble_state.dart  dongle_connection.dart
mobile/lib/core/: constants.dart  theme.dart
mobile/lib/ui/: cervos_scaffold.dart  home_screen.dart
mobile/lib/ui/widgets/: connection_card.dart  dongle_scanner.dart  level_meter.dart  spectrogram_widget.dart
scripts/: env.sh  generate-certs.sh  setup-docker.sh  setup-native.sh  setup.sh  tailscale-setup.sh  test-e2e.sh
server/: docker-compose.yml  meeting_stt.py  native-setup.sh
server/nginx/: nginx.conf
server/openclaw/: routing.yaml
server/persistence/migrations/: 001_initial_schema.sql
